Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.5.0
============================

2022-11-04 Jose Kahan
	* src/Makefile.in
	Some C linkers require libraries to be declared after functions in that
	library are called, and not before. This was notably with -lm and
	-ltrio, where -lm had to be declared after -ltrio.
        (closes # 84)

2022-04-01 Jose Kahan
	* src/string.c src/utf8.h
	*Integrated utf8.h to provide validation of UTF-8 strings

	* When i18n_convstring is called to convert from UTF-8 to UTF-8, we
	skip the convertion, but we now replace all invalid UTF-8 chars
	with a '?' char.

2022-03-30 Jose Kahan
	* src/parse.c
	The demimed flag was not being updated when decoding RFC2047 lines

	* src/hypermail.h
	Increase NAMESTRLEN from 80 to 320 to take into account that a single
	UTF-8 character may be encoded in up to four bytes.

	* src/string.c src/parse.c src/proto.h
	If a header value is not using RFC2047, make sure its value consists
	of only US-ASCII printable character plus newline.

2021-11-17 David Hughes
	* docs/hmrc.html src/parse.c
	Added support for strftime (3) formatting in the append_filename configuration
	option to allow for archived messages to be split over multiple directories
	(monthly or yearly for example)

2021-11-09 Jose Kahan
	* src/parse.c
	MIME RFC1341 epilogues were not being ignored when they were made of
	more than newlines

2021-11-08 Jose Kahan
	* src/print.c
	Restoring in-reply-to and next-in-thread links to deleted messages.
	Removing them caused confusing in the archives. One small change
	w3t to 2.4.3: links now only display "deleted message" and not
	"(deleted message) subject" as previously.

2021-11-03 Jose Kahan
	* src/print.c src/print.h src/hypermail.h src/parse.c src/struct.c
	Improved the handling and displaying of message/rfc822
	attachments (closes #72).
	Rewrote parts of printbody() to improve how attachments are written